[package]
name = "holidays_jp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mao Nabeta <mao.nabeta@gmail.com>"]
description = "holidays_jp determines Japanese national holiday. The definition of holidays is based on csv file provided by the Cabinet Office."
repository = "https://github.com/nabetama/holidays_jp"
keywords = ["holilday", "Japan", "Japanese"]
categories = ["command-line-tool"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4" , features = ["cargo","derive"]}
csv = "1.1"
encoding_rs = "0.8.32"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.69"
reqwest = "0.11.14"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_fs = "1.0.10"
httptest = "0.15.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3