[package]
name = "holidays_jp"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Mao Nabeta <mao.nabeta@gmail.com>"]
description = "holidays_jp determines Japanese national holiday. The definition of holidays is based on csv file provided by the Cabinet Office."
repository = "https://github.com/nabetama/holidays_jp"
keywords = ["holilday", "Japan", "Japanese"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4" , features = ["cargo","derive"]}
csv = "1.1"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_fs = "1.0.10"
httptest = "0.15.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
